Removed items automatically from 3rd party site and paths

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@ layout: default
     {{ post.content }}
   </div>
   <div class="container">
-    <script data-isso="//comments.privacysolutions.no/"
-        src="//comments.privacysolutions.no/js/embed.min.js"></script>
+    <script data-isso="https://comments.privacysolutions.no/"
+        src="https://comments.privacysolutions.no/js/embed.min.js"></script>
     <section id="isso-thread"></section>
   </div>
   {% endfor %}
